# MossadHook

./: .gitignore  CMakeLists.txt  README.md  README_zh-cn.md
.github/workflows/: Builder.yaml
builtin-plugin/: CMakeLists.txt
builtin-plugin/ApplicationEventMonitor/: MGCopyAnswerMonitor.cc  dynamic_loader_monitor.cc  file_operation_monitor.cc  memory_operation_instrument.cc  posix_file_descriptor_operation_monitor.cc
builtin-plugin/BionicLinkerUtil/: bionic_linker_demo.cc  bionic_linker_util.cc
builtin-plugin/ImportTableReplace/: CMakeLists.txt  mossad_import_replace.cc  mossad_import_replace.h
builtin-plugin/ObjcRuntimeReplace/: CMakeLists.txt  mossad_objc_message_hook.h  mossad_objc_message_hook.mm
builtin-plugin/SupervisorCallMonitor/: CMakeLists.txt  mach_system_call_log_handler.cc  sensitive_api_monitor.cc  supervisor_call_monitor.cc  supervisor_call_monitor.h  system_call_log_handler.cc  test_supervisor_call_monitor.cc
builtin-plugin/SymbolResolver/: CMakeLists.txt  mossad_symbol_resolver.h
builtin-plugin/SymbolResolver/elf/: mossad_symbol_resolver.cc
builtin-plugin/SymbolResolver/macho/: mossad_symbol_resolver.cc
builtin-plugin/SymbolResolver/pe/: mossad_symbol_resolver.cc
cmake/: build_environment_check.cmake  compiler_and_linker.cmake  mossad.xcode.source.cmake
cmake/platform/: platform-darwin.cmake
docs/: compile.md  examples.md
examples/: CMakeLists.txt  socket_example.cc
include/: mossad.h
scripts/: platform_builder.py
source/: Interceptor.h  mossad.cpp
source/Backend/UserMode/ExecMemory/: code-patch-tool-darwin.cc  code-patch-tool-posix.cc  code-patch-tool-windows.cc
source/Backend/UserMode/MultiThreadSupport/: ThreadSupport.h
source/Backend/UserMode/PlatformUtil/Darwin/: ProcessRuntime.cc
source/Backend/UserMode/Thread/: PlatformThread.h
source/Backend/UserMode/UnifiedInterface/: platform-posix.cc
source/InstructionRelocation/: InstructionRelocation.h
source/InstructionRelocation/arm/: InstructionRelocationARM.cc  InstructionRelocationARM.h
source/InstructionRelocation/arm64/: InstructionRelocationARM64.cc  InstructionRelocationARM64.h  inst_decode_encode_kit.h
source/InstructionRelocation/x64/: InstructionRelocationX64.cc  InstructionRelocationX64.h
source/InstructionRelocation/x86/: InstructionRelocationX86.cc  InstructionRelocationX86.h  InstructionRelocationX86Shared.cc  InstructionRelocationX86Shared.h
source/InstructionRelocation/x86/x86_insn_decode/: x86_insn_decode.h
source/InterceptRouting/: InlineHookRouting.h  InstrumentRouting.h  InterceptRouting.h  RoutingPlugin.h
source/InterceptRouting/InstrumentRouting/: instrument_routing_handler.cpp
source/InterceptRouting/NearBranchTrampoline/: NearBranchTrampoline.h  near_trampoline_arm64.cc
source/InterceptRouting/deprecated.Routing/FunctionWrapper/: FunctionWrapperExport.cc  function-wrapper.cc  function-wrapper.h  intercept_routing_handler.cc  intercept_routing_handler.h
source/MemoryAllocator/: AssemblerCodeBuilder.h  CodeMemBuffer.h  NearMemoryAllocator.h
source/PlatformUnifiedInterface/: platform.h
source/PlatformUnifiedInterface/ExecMemory/: CodePatchTool.h
source/TrampolineBridge/ClosureTrampolineBridge/: ClosureTrampoline.h  common_bridge_handler.h
source/TrampolineBridge/ClosureTrampolineBridge/arm/: ClosureTrampolineARM.cc  closure_bridge_arm.cc  helper_arm.cc
source/TrampolineBridge/ClosureTrampolineBridge/arm64/: ClosureTrampolineARM64.cc  closure_bridge_arm64.cc  helper_arm64.cc
source/TrampolineBridge/ClosureTrampolineBridge/x64/: ClosureTrampolineX64.cc  closure_bridge_x64.cc  helper_x64.cc
source/TrampolineBridge/ClosureTrampolineBridge/x86/: ClosureTrampolineX86.cc  closure_bridge_x86.cc  helper_x86.cc
source/TrampolineBridge/Trampoline/: trampoline_arm.cc  trampoline_arm64.cc  trampoline_x64.cc  trampoline_x86.cc
source/core/arch/arm64/: constants-arm64.h
source/core/assembler/: assembler-arm.h  assembler-arm64.h  assembler-ia32.h  assembler-x64.h  assembler-x86-shared.h  assembler.h
source/mossad/: common.h  mossad_internal.h  platform_detect_macro.h
tests/: CMakeLists.txt  test_native.cpp
